# FinalProject

./: Chat_Client.rar  README.md
Client/: CMakeLists.txt
Client/sources/: connectform.cpp  connectform.h  connectform.ui  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui
Client/translations/: my_ru.qm  my_ru.ts
Server/: CMakeLists.txt  qsqltablemodel_users.cpp  qsqltablemodel_users.h
Server/sources/: checkboxdelegate.cpp  checkboxdelegate.h  client.cpp  client.h  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sha1.cpp  sha1.h
Server/translations/: my_ru.qm  my_ru.ts
